--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Enigma</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="title_activity_singleplayer">Singleplayer</string>
 </resources>
